Style various components Colour up radio menu Centre buttons in main component (may shift back left if we add search bar) Fix color strip on contentContainer to only appear on desktop view Add a whole bunch of icons

--- a/src/components/ContentContainer/ContentContainer.css
+++ b/src/components/ContentContainer/ContentContainer.css
@@ -1,9 +1,6 @@
 .ContentContainer {
   width: 100%;
   padding: 20px 0 0 0;
-  border-top: 5px solid #0090D3;
-  border-top-right-radius: 1%;
-  border-top-left-radius: 1%;
 }
 
 .ContentContainer {
@@ -15,6 +12,9 @@
     padding: 20px;
     margin-top: 120px;
     background-color: #fff;
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.24);
+    border-top: 5px solid #0090D3;
+    border-top-right-radius: 1%;
+    border-top-left-radius: 1%;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.12);
   }
 }
